--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >
   Google search results) and in your feed.xml site description.
 baseurl: ""
 url: "http://psuong.github.io"
-fixedNav: 'false' # true or false
+fixedNav: 'true' # true or false
 theme: green #purple green, blue, orange, purple, grey
 twitterUsername: PorrithSuong
 githubUsername: psuong
