Adds LinkedIn Profile to the footer.

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ theme: green #purple green, blue, orange, purple, grey
 twitterUsername: PorrithSuong
 githubUsername: psuong
 bitbucketUsername: psuong01
+linkedinUsername: porrithsuong
 dribbbleUsername:
 codepenUsername:
 
