--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,8 @@
 title: Porrith Suong
 email: psuong95@gmail.com
 description: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    Welcome to my portfolio! This is where I post updates related
+    to whatever work I'm doing. Thanks for visiting! :)
 baseurl: ""
 url: "http://psuong.github.io"
 fixedNav: 'true' # true or false
