--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,8 @@ description: Game developer doing all kinds of things with games!
 
 # List of links in the navigation bar
 navbar-links:
-#  About Me: "aboutme"
-#  Resources:
-#    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-#    - Learn markdown: "http://www.markdowntutorial.com/"
-#    - GitHub Pages: "https://pages.github.com/"
-#  Author's home: "http://deanattali.com"
   Projects: "projects"
-  Resume: "aboutme"
+  Resume: "documents/Suong_Porrith_Resume.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -128,6 +122,7 @@ exclude:
   - README.md
   - CNAME
   - Vagrantfile
+  - archive
 
 # prose.io config
 prose:
