Adds favicon.ico

--- a/hugo.toml
+++ b/hugo.toml
@@ -19,7 +19,7 @@ rss = true
 lastmod = true
 location = "Brooklyn"
 userStatusEmoji = "😀"
-favicon = "/images/github.png"
+favicon = "/images/favicon.ico"
 avatar = "/images/avatar.png"
 headerIcon = "/images/github-mark-white.png"
 utterancesRepo = "psuong/psuong.github.io"
